--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -8,5 +8,7 @@
 
 <h1 th:text="${board.title}">제목입니다.</h1>
 <p th:text="${board.content}">내용이 들어갈 공간입니다.</p>
+<a th:href="@{/delete(id=${board.id})}">글삭제</a>
+<a th:href="@{/modify/{id}(id = ${board.id})}">글수정</a>
 </body>
 </html>
